--- a/src/Style/Ingredients.css
+++ b/src/Style/Ingredients.css
@@ -1,152 +1,366 @@
-
 @font-face{
   src: url(../Content/C_BOX_D.TTF);
   font-family: ChocolateBox;
 }
-
 .ingredienthead{
-    margin-top: 50px;
-    margin-bottom: 60px;
+  margin-top: 50px;
+  margin-bottom: 60px;
 }
 .IngredientMainHeading{
- text-align:center;
+text-align:center;
 }
 .ingcursor{
-   cursor: pointer;
+ cursor: pointer;
+
 }
 
 .column {
-    float: left;
+  float: left;
+  
+  padding: 50px;
+  text-align: center;
+  font-size:1.563rem;
+  cursor: pointer;
+  color: white;
+}
+
+.containerTab {
+    margin-top: 50px;
+  padding: 20px;
+  color: black;
+
+  border : 1px solid black;
+  margin-bottom: 50px;
+
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Closable button inside the container tab */
+.closebtn {
+  float: right;
+  color: rgb(0, 0, 0);
+  width: 50px;
+  height: 50px;
+
+  font-size:2.188rem;
+  cursor: pointer;
+}
+
+.ingimage1{
     
-    padding: 50px;
-    text-align: center;
-    font-size: 25px;
-    cursor: pointer;
-    color: white;
-  }
+  width: 100%;
+    max-width: 400px;
+    padding-left: 40px;
+    padding-right: 40px;
   
-  .containerTab {
-      margin-top: 50px;
-    padding: 20px;
-    color: black;
-  
-    border : 1px solid black;
-    margin-bottom: 50px;
-
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Closable button inside the container tab */
-  .closebtn {
-    float: right;
-    color: rgb(0, 0, 0);
-    width: 50px;
-    height: 50px;
-
-    font-size: 35px;
-    cursor: pointer;
   }
 
+  .ArganOilImg{
+    width: 100%;
+    height: 100%;
+    max-width:360px;
+    max-height:300px ;
+    padding-left: 30px;
+  }
+
+  .EucalyptusImg{
+    width:470px;
+     height:340px; 
+     padding-left: 60px;
+  }
+  .RosemaryImg{
+    width:470px;
+     height:300px;
+     padding-left: 15px;
+  }
+  .TeatreeImg{
+    width:420px;
+     height:330px;
+     padding-left: 70px;
+  }
+  .PeppermintImg{
+    width:320px;
+    height:300px;  
+    padding-left: 50px;
+  }
+  .LavenderImg{
+    width:470px;
+     height:300px; 
+    padding-left: 45px;
+  }
+  .JojobaOil{
+    width: 100%;
+    height:100%;
+    max-width: 320px;
+    max-height:300px;
+  }
+  .Description{
+      
+      font-size: 1.25rem;
+      text-align: center;
+      
+    }
+    .Title{
+      font-family: ChocolateBox;
+      font-size: 3.125rem;
+      font-weight: bold;
+      padding-top: 70px;
+      text-align: center;
+     
+    }
+    .MainTitle{
+      font-family: ChocolateBox;
+      font-size: 4.375rem;
+      font-weight: bold;
+      padding-top: 70px;
+   
+      text-align: center;
+     
+    }
+   
+  .btningredients{
+      background-color: transparent;
+      color: rgb(255, 255, 255);
+      font-weight: bold;
+        height: 60px;
+        width: 150px;
+        border-radius: 5px ;
+        border: 1px solid white;
+        text-align: center;
+  }
+  .btningredients:hover{
+      color: black;
+      background-color: white;
+  }
+  .divbtning{
+      justify-content: center;
+      display: flex;
+  }
+  .Footerrowing{
+      background-color:rgb(38, 40, 43);
+      margin-top: 80px;
+     
+  }
+  .act1 {
+  
+     
+    
+     margin-top: 20px;
+     margin-bottom: 20px;
+  }
+  .act2{
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+
+
+  
+@media (min-width:400px){
+  html{
+    font-size: 80%;
+  }
   .ingimage1{
       
     width: 100%;
-      max-width: 400px;
-      padding-left: 40px;
-      padding-right: 40px;
+    max-width: 500px;
+   
+    height: 400px;
+    padding-left: 90px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    padding-right:  90px;
+      
+    }
+
+
     
+    
+}
+
+@media (min-width: 500px) { 
+
+  .ingimage1{
+        
+      max-width: 500px;
+      width: 100%;
+      height: 450px;
+      padding-left: 100px;
+      padding-top: 30px;
+      padding-bottom: 20px;
+      padding-right: 100px;
+        
+      }
+
+      
+      
+    }
+  
+  
+    
+   
+  @media (min-width: 768px) {  
+
+    .ingimage1{
+        
+      max-width: 500px;
+      width: 100%;
+      height: 300px;
+      padding-left: 20px;
+      padding-top: 40px;
+      padding-bottom: 20px;
+      padding-right: 20px;
+    
+     
+      
+    }
+    .dvshoping1{
+  
+      height: 500px;
+     
+    }
+    .dvshoping2{
+    
+      height: 500px;
+     
+    }
+    .dvshoping3{
+   
+      height: 500px;
+     
     }
 
     .ArganOilImg{
-      width:360px;
-      height:300px ;
+      width: 100%;
+      height: 100%;
+      max-width:360px;
+      max-height:300px ;
       padding-left: 30px;
     }
 
     .EucalyptusImg{
-      width:470px;
-       height:340px; 
+      width: 100%;
+      height: 100%;
+      max-width:470px;
+       max-height:340px; 
        padding-left: 60px;
     }
     .RosemaryImg{
-      width:470px;
-       height:300px;
+      width: 100%;
+      height: 100%;
+      max-width:470px;
+       max-height:300px;
        padding-left: 15px;
     }
     .TeatreeImg{
-      width:420px;
-       height:330px;
+      height: 100%;
+      width: 100%;
+      max-width:420px;
+       max-height:330px;
        padding-left: 70px;
     }
     .PeppermintImg{
-      width:320px;
-      height:300px;  
+      width: 100%;
+      height: 100%;
+      max-width:320px;
+      max-height:300px;  
       padding-left: 50px;
     }
     .LavenderImg{
-      width:470px;
-       height:300px; 
+      width: 100%;
+      height: 100%;
+      max-width:470px;
+       max-height:300px;
       padding-left: 45px;
     }
-    .Description{
+    .JojobaOil{
+      width: 100%;
+      height:100%;
+      max-width: 320px;
+      max-height:300px;
+    }
+    .CastorOil{
+      width: 100%;
+      height:100%;
+      max-width:370px;
+       max-height:380px;
+    }
+   .SweetAlmondOil{
+    width: 100%;
+    height: 100%;
+    max-width:360px ;
+    max-height:350px;
+   }
+  }
+   
+  @media (min-width: 992px) { 
+ 
+    .ingimage1{
         
-        font-size: 20px;
-        text-align: center;
-        
-      }
-      .Title{
-        font-family: ChocolateBox;
-        font-size: 50px;
-        font-weight: bold;
-        padding-top: 70px;
-        text-align: center;
-       
-      }
-      .MainTitle{
-        font-family: ChocolateBox;
-        font-size: 70px;
-        font-weight: bold;
-        padding-top: 70px;
-        text-align: center;
-       
-      }
-     
-    .btningredients{
-        background-color: transparent;
-        color: rgb(255, 255, 255);
-        font-weight: bold;
-          height: 60px;
-          width: 150px;
-          border-radius: 5px ;
-          border: 1px solid white;
-          text-align: center;
-    }
-    .btningredients:hover{
-        color: black;
-        background-color: white;
-    }
-    .divbtning{
-        justify-content: center;
-        display: flex;
-    }
-    .Footerrowing{
-        background-color:rgb(38, 40, 43);
-        margin-top: 80px;
-       
-    }
-    .act1 {
+      max-width: 360px;
+      width: 100%;
+      height: auto;
+      padding-left: 50px;
+      padding-top: 30px;
+      padding-bottom: 20px;
+      padding-right: 50px;
     
-       
+     
       
-       margin-top: 20px;
-       margin-bottom: 20px;
     }
-    .act2{
-      margin-bottom: 20px;
-      margin-top: 20px;
+
+    .dvshoping1{
+  
+      height: 400px;
+     
     }
+    .dvshoping2{
+    
+      height: 400px;
+     
+    }
+    .dvshoping3{
+   
+      height: 400px;
+     
+    }
+    }
+   
+  @media (min-width: 1200px) {  
+    
+    .ingimage1{
+        
+      max-width: 390px;
+      width: 100%;
+      height: auto;
+      padding-left: 50px;
+      padding-top: 30px;
+      padding-bottom: 20px;
+      padding-right: 50px;
+    
+     
+      
+    }
+    .dvshoping1{
+  
+      height: 500px;
+     
+    }
+    .dvshoping2{
+    
+      height: 500px;
+     
+    }
+    .dvshoping3{
+   
+      height: 500px;
+     
+    }
+  }
+   
