--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -176,73 +176,113 @@
   
   
   
+
+.quote{
+  height:1200px;
   
   
-  .quote{
-    height:900px;
-    
-    
-  }
-  .quotefont1{
-    padding-top:100px;
-    font-family:ChocolateBox; 
-    font-size:74px; 
-    font-weight:900; 
-    text-align: center;
-  }
-  .quotefont2{
-    padding-top:10px;
-    font-family: 'Poppins', sans-serif;
-    font-size:24px;
-    font-weight:900; 
-    text-align: center;
-  }
-  .centered {
-    position: absolute;
-    
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }     
-  .centered2 {
-    position: absolute;
-    top:50%;
-    left: 40%;
-    transform: translate(-33%, -40%);
-  }  
-  .centeredquote2 {
-    position: absolute;
-    top:35%;
-    left: 40%;
-    transform: translate(-33%, -40%);
-  }  
-  .centered72 {
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }      
-       .quoteimg{
-          width:100%;
-          height: 800px;
-          opacity: 0.3;
-          margin-top:60px;
-         
-       }
-      .fullimg{background-image: url("../Content/PNG/Spotlight1.png");
-  background-repeat: no-repeat;
-   background-position:center;
-   background-size: cover; 
-   height:800px;
-      }
+}
+.quotefont1{
+  padding-top:100px;
+  font-family:ChocolateBox; 
+  font-size:4rem; 
+  font-weight:900; 
+  text-align: center;
+}
+.quotefont2{
+  padding-top:10px;
+  font-family: 'Poppins', sans-serif;
+  font-size:1.5rem;
+  font-weight:900; 
+  text-align: center;
+}
+.quote2font1{
+  padding-top:100px;
+  font-family:ChocolateBox; 
+  font-size:4rem; 
+  font-weight:900; 
+  text-align: center;
+}
+.quote2font2{
+  padding-top:10px;
   
+  font-family: 'Poppins', sans-serif;
+  font-size:1.5rem;
+  font-weight:900; 
+  text-align: center;
+}
+.centered {
+  position: absolute;
   
-      .organic{
-        margin-bottom: 50px;
-        margin-top: 200px;
-  height:450px;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}     
+.Whycentered {
+  position: absolute;
+  width: 100%;;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}   
+.centered2 {
+  position: absolute;
+  top:50%;
+  left: 40%;
+  transform: translate(-33%, -40%);
+}  
+.quotecentered2 {
+  position: absolute;
+  top:60%;
+  left: 40%;
+  transform: translate(-33%, -40%);
+}  
+.centeredquote2 {
+  position: absolute;
+  top:25%;
+  left: 40%;
+  transform: translate(-33%, -40%);
+}  
+.centered72 {
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}      
+     .quoteimg{
+        width:100%;
+        height: 1000px;
+        opacity: 0.3;
+        margin-top:60px;
+       
+     }
+    .fullimg{background-image: url("../Content/PNG/Spotlight1.png");
+background-repeat: no-repeat;
+ background-position:center;
+ background-size: cover; 
+ height:800px;
     }
-     
+
+
+    .organic{
+      margin-bottom: 50px;
+      margin-top: 50px;
+height:750px;
+  }
+  .organicimg{
+    width:100%;
+    height: 650px;
+    opacity: 0.3;
+    margin-top:60px;
+   
+ }
+ .centeredorganic2 {
+  position: absolute;
+  top:35%;
+  left: 40%;
+  transform: translate(-33%, -40%);
+}  
+    
       
       .dv8{
       
@@ -259,7 +299,7 @@
       .organicheading{
         margin-top:10px;
         font-family:ChocolateBox; 
-        font-size:64px; 
+        font-size:4.8rem; 
         font-weight:900; 
         text-align: center;
       }
@@ -387,11 +427,12 @@
       .Howtoapplyheading{
         margin-top: 50px;
         height: 150px;
+
       }
     .Howtoheadingfont1{
       margin-top: 30px;
         font-family:ChocolateBox; 
-        font-size:84px; 
+        font-size:4.8rem; 
         font-weight:900; 
         text-align: center;
       }
@@ -435,7 +476,7 @@
         color: rgb(0, 0, 0);
       
         font-family:ChocolateBox; 
-        font-size:84px; 
+        font-size:4.8rem; 
         font-weight:900; 
         text-align: center;
       }
