--- a/src/Style/Blogs.css
+++ b/src/Style/Blogs.css
@@ -42,10 +42,10 @@
 .bannertext3{
     bottom:85px;
     position: absolute;
-    left: 623px;
+    left: 600px;
     font-size: 48px;
     font-family: ChocolateBox;
-    text-align: center;
+   
     color: rgb(168, 168, 168);
 }
  
@@ -66,8 +66,9 @@
 
 
 .blogimg{
-    width:420px;
-    height:350px;
+  width: 100%;  
+  max-width:420px;
+    height:auto;
 }
 
 
@@ -77,7 +78,7 @@
 
 .overlaycontainer {
     position: relative;
-    width: 100%;
+    width:fit-content;
   }
   
   .blogoverlay {
