--- a/src/Style/Shop.css
+++ b/src/Style/Shop.css
@@ -58,9 +58,9 @@
       
     max-width: 330px;
     width: 100%;
-    height: 380px;
+    height: auto;
     padding-left: 50px;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 50px;
   
