--- a/src/Style/Ingredients.css
+++ b/src/Style/Ingredients.css
@@ -52,14 +52,7 @@ text-align:center;
   cursor: pointer;
 }
 
-.ingimage1{
-    
-  width: 100%;
-    max-width: 400px;
-    padding-left: 40px;
-    padding-right: 40px;
-  
-  }
+ 
 
   .ArganOilImg{
     width: 100%;
@@ -68,7 +61,12 @@ text-align:center;
     max-height:300px ;
     padding-left: 30px;
   }
-
+  .CastorOil{
+    width: 100%;
+    height:100%;
+    max-width:370px;
+     max-height:380px;
+  }
   .EucalyptusImg{
     width:470px;
      height:340px; 
@@ -161,80 +159,232 @@ text-align:center;
 
 
 
-  
-@media (min-width:400px){
-  html{
-    font-size: 80%;
-  }
-  .ingimage1{
+  @media (max-width:1200px ){
+    .Description{
       
-    width: 100%;
-    max-width: 500px;
-   
-    height: 400px;
-    padding-left: 90px;
-    padding-top: 50px;
-    padding-bottom: 20px;
-    padding-right:  90px;
+      font-size: 1.1rem;
+      text-align: center;
       
+    }
+    .Title{
+      font-family: ChocolateBox;
+      font-size: 3rem;
+      font-weight: bold;
+      padding-top: 70px;
+      text-align: center;
+     
+    }
+
+    .ArganOilImg{
+      width: 100%;
+      height: 100%;
+      max-width:330px;
+      max-height:270px ;
+      padding-top: 40px;
+      padding-left: 20px;
+    }
+
+    .JojobaOil{
+      width: 100%;
+      height:100%;
+      max-width: 320px;
+      max-height:300px;
+      padding-top: 50px;
     }
 
 
-    
-    
-}
-
-@media (min-width: 500px) { 
-
-  .ingimage1{
-        
-      max-width: 500px;
+    .EucalyptusImg{
       width: 100%;
-      height: 450px;
-      padding-left: 100px;
-      padding-top: 30px;
-      padding-bottom: 20px;
-      padding-right: 100px;
-        
-      }
-
-      
+      height: 100%;
+      max-width:340px;
+       max-height:380px; 
+       padding-top: 20px;
+       padding-left: 30px;
+    
+    }
+    .RosemaryImg{
+      width: 100%;
+      height: 100%;
+      max-width:340px;
+       max-height:380px;
+       padding-top: 30px;
       
     }
-  
-  
-    
-   
-  @media (min-width: 768px) {  
 
-    .ingimage1{
-        
-      max-width: 500px;
+    .CastorOil{
       width: 100%;
-      height: 300px;
+      height:100%;
+      max-width:370px;
+       max-height:380px;
+       padding-top: 60px;
+    }
+
+    .TeatreeImg{
+      height: 100%;
+      width: 100%;
+      max-width:420px;
+       max-height:330px;
+       padding-left: 40px;
+    }
+
+    .SweetAlmondOil{
+      width: 100%;
+      height: 100%;
+      max-width:360px ;
+      max-height:350px;
+      padding-top: 50px;
+     }
+
+     .PeppermintImg{
+      width: 100%;
+      height: 100%;
+      max-width:320px;
+      max-height:280px;  
       padding-left: 20px;
       padding-top: 40px;
-      padding-bottom: 20px;
-      padding-right: 20px;
-    
-     
+    }
+
+    .LavenderImg{
+      width: 100%;
+      height: 100%;
+      max-width:470px;
+       max-height:300px;
+      padding-left: 45px;
+      padding-top: 40px;
+    }
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width:992px ){
+
+ 
+  .Description{
       
-    }
-    .dvshoping1{
-  
-      height: 500px;
-     
-    }
-    .dvshoping2{
+    font-size: 1rem;
+    text-align: left;
     
-      height: 500px;
-     
-    }
-    .dvshoping3{
+  }
+  .Title{
+    font-family: ChocolateBox;
+    font-size: 2rem;
+    font-weight: bold;
+    padding-top: 70px;
+    text-align: left;
    
-      height: 500px;
+  }
+  
+.ArganOilImg{
+  width: 100%;
+  height: 100%;
+  max-width:330px;
+  max-height:270px ;
+  padding-top: 40px;
+  padding-left: 20px;
+}
+
+.JojobaOil{
+  width: 100%;
+  height:100%;
+  max-width: 320px;
+  max-height:350px;
+  padding-top: 100px;
+}
+
+
+.EucalyptusImg{
+  width: 100%;
+  height: 100%;
+  max-width:340px;
+   max-height:380px; 
+   padding-top: 20px;
+   padding-left: 30px;
+
+}
+.RosemaryImg{
+  width: 100%;
+  height: 100%;
+  max-width:340px;
+   max-height:380px;
+   padding-top: 30px;
+  
+}
+
+.CastorOil{
+  width: 100%;
+  height:100%;
+  max-width:370px;
+   max-height:380px;
+   padding-top: 60px;
+}
+
+.TeatreeImg{
+  height: 100%;
+  width: 100%;
+  max-width:420px;
+   max-height:330px;
+   padding-left: 40px;
+}
+
+.SweetAlmondOil{
+  width: 100%;
+  height: 100%;
+  max-width:450px ;
+  max-height:350px;
+  padding-top: 100px;
+ }
+
+ .PeppermintImg{
+  width: 100%;
+  height: 100%;
+  max-width:360px;
+  max-height:280px;  
+  padding-left: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.LavenderImg{
+  width: 100%;
+  height: 100%;
+  max-width:470px;
+   max-height:320px;
+  padding-left: 15px;
+  padding-top: 40px;
+  padding-bottom: 10px;
+}
+}
+
+
+
+
+
+
+
+ 
+
+    
+ 
+ 
+  
+    
+   
+  @media (max-width: 768px) {  
+
+    
      
-    }
 
     .ArganOilImg{
       width: 100%;
@@ -256,7 +406,7 @@ text-align:center;
       height: 100%;
       max-width:470px;
        max-height:300px;
-       padding-left: 15px;
+       padding-left: 55px;
     }
     .TeatreeImg{
       height: 100%;
@@ -269,98 +419,146 @@ text-align:center;
       width: 100%;
       height: 100%;
       max-width:320px;
-      max-height:300px;  
-      padding-left: 50px;
+      max-height:280px;  
+      padding-left: 20px;
+      
+      padding-top: 20px;
     }
     .LavenderImg{
       width: 100%;
       height: 100%;
       max-width:470px;
-       max-height:300px;
+       max-height:320px;
       padding-left: 45px;
+      padding-top: 30px;
     }
     .JojobaOil{
       width: 100%;
       height:100%;
       max-width: 320px;
       max-height:300px;
+      padding-top: 50px;
     }
     .CastorOil{
       width: 100%;
       height:100%;
       max-width:370px;
        max-height:380px;
+       padding-left: 10px;
     }
    .SweetAlmondOil{
     width: 100%;
     height: 100%;
     max-width:360px ;
     max-height:350px;
+    padding-top: 50px;
    }
   }
    
-  @media (min-width: 992px) { 
- 
-    .ingimage1{
-        
-      max-width: 360px;
-      width: 100%;
-      height: auto;
-      padding-left: 50px;
-      padding-top: 30px;
-      padding-bottom: 20px;
-      padding-right: 50px;
-    
+
+  
+   
+  
+   
+  @media (max-width: 575px) {  
+
      
+  .Description{
       
+    font-size: 1.15rem;
+    text-align: left;
+    
+  }
+  .Title{
+    font-family: ChocolateBox;
+    font-size: 2.15rem;
+    font-weight: bold;
+    padding-top: 70px;
+    text-align: left;
+   
+  }
+  
+     
+
+    .ArganOilImg{
+      width: 100%;
+      height: 100%;
+      max-width:330px;
+      max-height:300px ;
+      padding-left: 0px;
     }
 
-    .dvshoping1{
-  
-      height: 400px;
-     
-    }
-    .dvshoping2{
-    
-      height: 400px;
-     
-    }
-    .dvshoping3{
-   
-      height: 400px;
-     
-    }
-    }
-   
-  @media (min-width: 1200px) {  
-    
-    .ingimage1{
-        
-      max-width: 390px;
+    .EucalyptusImg{
       width: 100%;
-      height: auto;
-      padding-left: 50px;
-      padding-top: 30px;
-      padding-bottom: 20px;
-      padding-right: 50px;
-    
-     
+      height: 100%;
+      max-width:360px;
+       max-height:320px; 
+       padding-left: 20px;
+       padding-top: 0px;
+    }
+    .RosemaryImg{
+      width: 100%;
+      height: 100%;
+      max-width:360px;
+       max-height:320px;
+       padding-left: 0px;
+    }
+    .TeatreeImg{
+      height: 100%;
+      width: 100%;
+      max-width:400px;
+       max-height:330px;
+       padding-left: 0px;
+    }
+    .PeppermintImg{
+      width: 100%;
+      height: 100%;
+      max-width:320px;
+      max-height:320px;  
+      padding-left: 0px;
       
+      padding-top: 0px;
     }
-    .dvshoping1{
+    .LavenderImg{
+      width: 100%;
+      height: 100%;
+      max-width:360px;
+       max-height:300px;
+      padding-left: 0px;
+      padding-top: 0px;
+    }
+    .JojobaOil{
+      width: 100%;
+      height:100%;
+      max-width: 320px;
+      max-height:300px;
+      padding-top: 0px;
+       
+    }
+    .CastorOil{
+      width: 100%;
+      height:100%;
+      max-width:370px;
+       max-height:380px;
+       padding-left: 0px;
+    }
+   .SweetAlmondOil{
+    width: 100%;
+    height: 100%;
+    max-width:360px ;
+    max-height:360px;
+    padding-top: 0px;
+   }
+   .act1 {
   
-      height: 500px;
      
-    }
-    .dvshoping2{
     
-      height: 500px;
-     
-    }
-    .dvshoping3{
-   
-      height: 500px;
-     
-    }
+    margin-top: 0px;
+    margin-bottom: 0px;
+ }
+ .act2{
+   margin-bottom: 20px;
+   margin-top: 0px;
+ }
+
   }
-   
